<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="bottom|end"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="MissingConstraints" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/teal_700"
                android:onClick="ClicaBotao"
                android:text="@string/clear"
                app:backgroundTint="@color/teal_700" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="ClicaBotao"
                android:text="@string/div"
                app:backgroundTint="@android:color/holo_orange_light"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/button1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_1"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_2"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_3"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/buttonMore"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="ClicaBotao"
                android:text="@string/more"
                app:backgroundTint="@android:color/holo_orange_light" />

            <Button
                android:id="@+id/button0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_0"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonDoc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="ClicaBotao"
                android:text="@string/doc"
                app:backgroundTint="@android:color/holo_orange_light"
                app:layout_column="2"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/teal_700"
                android:onClick="ClicaBotao"
                android:text="@string/_equals"
                app:backgroundTint="@color/teal_700"
                app:layout_column="3"
                app:layout_row="4" />

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_4"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_5"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_6"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/buttonLess"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="ClicaBotao"
                android:text="@string/less"
                app:backgroundTint="@android:color/holo_orange_light" />

            <Button
                android:id="@+id/button7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_7"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_8"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/button9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:onClick="ClicaBotao"
                android:text="@string/_9"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/buttonMulti"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="ClicaBotao"
                android:text="@string/multi"
                app:backgroundTint="@android:color/holo_orange_light" />

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>